PA_Education/TestMenifest/force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <label>출하</label>
    <nameField>
        <displayFormat>SM-{000000}</displayFormat>
        <label>출하 코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>