PA_Education/TestMenifest/force-app/main/default/objects/Shipment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>거래처</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsTypeSales__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>출하</relationshipLabel>
    <relationshipName>Shipment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>