PA_Education/TestMenifest/force-app/main/default/objects/Shipment__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>출하일</label>
    <required>true</required>
    <type>Date</type>
</CustomField>