PA_Education/TestMenifest/force-app/main/default/objects/Shipment__c/fields/ShipmentBarcode__c.field-meta.xml
<CustomField>
    <fullName>ShipmentBarcode__c</fullName>
    <formula>LEFT( ShipmentItem__r.Code__c , 7) &amp; &quot;B&quot; &amp; UPPER(MID(Id, 4, 15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>출하 바코드</label>
    <type>Text</type>
</CustomField>