PA_Education/TestMenifest/force-app/main/default/objects/Shipment__c/fields/ShipmentCount__c.field-meta.xml
<CustomField>
    <fullName>ShipmentCount__c</fullName>
    <label>출하수량</label>
    <summarizedField>ShipmentDetail__c.Count__c</summarizedField>
    <summaryForeignKey>ShipmentDetail__c.Shipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>