PA_Education/TestMenifest/force-app/main/default/objects/Shipment__c/fields/ShipmentItem__c.field-meta.xml
<CustomField>
    <fullName>ShipmentItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>출하제품</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Item__c.Type__c</field>
            <operation>equals</operation>
            <value>제품</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>출하</relationshipLabel>
    <relationshipName>Shipment</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>