PA_Education/TestMenifest/force-app/main/default/objects/Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <columns>ShipmentItem__c</columns>
    <columns>ShipmentCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>